# ChatApp-Python

./: .gitignore  Agents.md  Dockerfile  README.md  pyproject.toml  server.py
.artifacts/.prompts/: 0.0.1-zeroplan.md  0.1.1-zeroplan.md  1.1.1-zeroplan.md  1.1.1.0-zeroplan.md
.github/workflows/: ci.yml  dependency-sync.yml
docs/: README.md  ai-factory-orchestration-plan.md
docs/agents/: README.md
docs/architecture/: README.md  coding-standards.md  diagram.md  master-architect-multi-agent-plan.md
docs/decisions/: ADR-0001-testing-strategy.md  README.md
docs/evidence/: README.md
docs/recommendations/: README.md
docs/tasks/: README.md
docs/templates/: adr-template.md  evidence-template.md  task-spec-template.md  test-plan-template.md
docs/testing/: README.md  test-guide.md
scripts/: check_requirements_sync.sh
src/: main.py
src/assistants/: assistants.py  programador.py
src/assistants/utils/: README.md  __init__.py  data_store.py  data_store_from_web_scraper.py  paths.py  vector_store.py
src/assistants/utils/archive/: __init__.py  vector_store.py  (+1 more)
src/chat/: chat_app.py  chat_interface.py  interfaces.py
src/chat/adapters/: assistant_integration_adapter.py
src/chat/application/: chat_controller.py  contracts.py
src/chat/components/: chat_drawer.py  chat_timeline.py  message_timeline_renderer.py
src/chat/entities/: __init__.py  file.py  message.py  private_room.py  room.py  user.py
src/chat/services/: message_event_router.py
src/chat/ui/: chat_room.py  drawer.py  input_bar.py
src/chat/utils/: file_handler.py
src/chat_app/assistants/: assistants.py  programador.py
src/chat_app/chat/: auth.py  chat_app.py  chat_interface.py  chat_message.py  chat_room.py
src/chatapp/: __init__.py
src/chatapp/application/: __init__.py  ports.py  services.py  upload_service.py
src/chatapp/config/: assistant.py  settings.py
src/chatapp/domain/: __init__.py  file.py  file_rules.py  message.py  room.py  user.py
src/chatapp/infrastructure/: fastapi_server.py  filename_utils.py
src/chatapp/ui_flet/: app.py
tests/: conftest.py  test_application_services.py  test_domain_entities.py  test_infrastructure.py  test_server_download.py  test_services.py
tests/assistants/: test_assistants_behavior.py  test_manager_tools.py
tests/chat/: test_chat_app.py  test_chat_room.py  test_chat_room_and_app.py  test_room_switch_rules.py  test_room_switching_rules.py
tests/server/: test_download_endpoint.py
(+15 files in other folders)
