[project]
name = "chatapp"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Marcelo Santos", email = "a79433@ualg.pt" }
]
dependencies = [
  "flet==0.27.5"
]

[tool.flet]
org = "com.mycompany"
product = "chatapp"
company = "Ualg"
copyright = "Copyright (C) 2025 by Marcelo Santos"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.27.5",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.27.5"}
pytest = "^8.3.5"
pytest-cov = "^6.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = "--cov=chat.chat_room --cov=chat.chat_app --cov=chat.application.chat_controller --cov=assistants.assistants --cov=server --cov-report=term-missing --cov-fail-under=70"
