[project]
name = "chatapp"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Marcelo Santos", email = "a79433@ualg.pt" }
]
dependencies = [
    "flet==0.27.5",
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.mycompany"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "chatapp"

# company name to display in about app dialogs
company = "Ualg"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by Marcelo Santos"

[tool.flet.app]
path = "src"
